<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_peso"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:minHeight="48dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edittext_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_peso"
        android:layout_marginTop="16dp"
        android:hint="@string/digite_sua_altura"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />



    <Button
        android:id="@+id/btnCalcular"
        android:text="@string/calcular"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>